# rlcs_team_creator

./: .gitignore  LICENSE  README.md  api_columns.json  db_setup.sql  db_upload.py  matches.csv  octane_api.py  pyproject.toml  utils.py
Elo/: 2-teams_modell_testing.ipynb  LR.pkl  convergence_test.ipynb  mean_std_approximations.ipynb  utils.py
Elo/queries/: elo_pre_query.sql
data_exploration/: convergence_test.ipynb  exploration.ipynb
data_exploration/queries/: elo_pre_query.sql  player_core_stats.sql
db_setup/: api_columns.json  db_setup.sql  db_upload.py  views_setup.sql
